Incrementando tag Google Analityc

--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-W8T6FVEQHH"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-W8T6FVEQHH");
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/favicon" href="./public/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta meta name="description" content="Filmes, séries e futebol, tudo em um só lugar. Chega de assinar várias plataformas, com a FUN TV tudo em um só lugar.
-    "/>
-    <meta name="keywords" content="IPTV, Tv por assinatura, Streaming de filmes, Entretenimento,
+    <meta
+      meta
+      name="description"
+      content="Filmes, séries e futebol, tudo em um só lugar. Chega de assinar várias plataformas, com a FUN TV tudo em um só lugar.
+    "
+    />
+    <meta
+      name="keywords"
+      content="IPTV, Tv por assinatura, Streaming de filmes, Entretenimento,
     Esporte ai vivo, Filmes online, Séries de TV, Canais 4k e FullHD
-    " />
+    "
+    />
     <title>Fun TV</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
