--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-W8T6FVEQHH");
+      gtag("config", "G-8X55JKVJY7");
     </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/favicon" href="./public/favicon.png" />
