--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-W8T6FVEQHH"
     ></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-W8T6FVEQHH"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -13,7 +18,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-8X55JKVJY7");
+      gtag("config", "G-W8T6FVEQHH");
     </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/favicon" href="./public/favicon.png" />
